Fixes and improvements: - Added horizontal scrollbar for table in guided tour - Changed background image on login screen - mailto links now append pear to the email and cc info@pear.life

--- a/app/styles/app-internal.scss
+++ b/app/styles/app-internal.scss
@@ -459,11 +459,18 @@ Guest List
 	}
 }
 
+.guide-container{
+	
+    overflow-x: auto;
+    white-space: nowrap;
+    -webkit-overflow-scrolling:touch;
+}
+
 .guide-content {
 	position:relative;
 	background-color:black;
 	display:inline-block;
-	
+
 	.cat-overlay-3{
 		width: 100%;
 		height: 100%;
