--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -123,7 +123,7 @@ p{
     @include text-shadow(1px 1px 1px #000);
 }
 #section1{
-	background-image: url(images/splash1.jpg);
+	background-image: url(images/bg1.jpg);
 	background-size:     cover;
 	background-repeat:   no-repeat;
 	/*background-position: center center;*/
